# MiraboxStreamDockSDK

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.ru.md  RELEASING.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: PROTOCOL.md
examples/counter_plugin/: README.md  build.spec
examples/counter_plugin/com.example.counter.sdPlugin/: manifest.json
examples/counter_plugin/com.example.counter.sdPlugin/property-inspector/: counter.html  counter.js  mirabox-sdk.js
examples/counter_plugin/src/counter_plugin/: __init__.py  __main__.py  action_registry.py  bootstrap.py  contracts.py  plugin.py
examples/counter_plugin/src/counter_plugin/actions/: __init__.py  counter.py
examples/counter_plugin/tests/: test_counter_plugin.py
scripts/: verify_distribution.py  verify_version.py
src/mirabox_sdk/: __init__.py  action.py  action_registry.py  cli.py  codecs.py  commands.py  connection.py  errors.py  events.py  json_types.py  logging_config.py  parser.py  plugin.py  protocols.py  registration.py  resource_cli.py  resources.py
src/mirabox_sdk/property_inspector/: mirabox-sdk.js
tests/: test_logging.py  test_release_tools.py  test_resources.py  test_runtime.py  test_sdk.py
